# Hashed-Agreement

./: Cargo.toml  README.md
Client-Lib/: Cargo.toml
Contract/: Cargo.toml
Contract/src/: lib.rs
