[package]
name = "hashed-agreement"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hashed_agreement"
crate-type = ["cdylib", "lib"]


[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"


[features]
no-entrypoint = []

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"
